Adds an app skeleton. Still needs some work.

--- a/src/components/home/style.scss
+++ b/src/components/home/style.scss
@@ -7,4 +7,14 @@
 
 .home {
 	padding: 20px;
+	opacity: 0;
+}
+
+.active {
+	animation: fadeIn 2s forwards ease 1;
+}
+
+@keyframes fadeIn {
+	from { opacity: 0; }
+	to { opacity: 1; }
 }
