--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -1,51 +1,52 @@
 @import '~style/helpers.scss';
 :global {
-	@import '~preact-material-components/Toolbar/mdc-toolbar.scss';
+  @import '~preact-material-components/Toolbar/mdc-toolbar.scss';
 }
 
 .toolbar {
-	height: $toolbar-height;
+  // height: $toolbar-height;
 
-	&.minimal {
-		height: $toolbar-height / 2;
-	}
+  &.minimal {
+    display: none;
+    // height: $toolbar-height / 2;
+  }
 
-	// > * {
-	// 	min-height: 0;
-	// }
+  // > * {
+  //   min-height: 0;
+  // }
 }
 
 .fileInput {
-	position: absolute;
-	left: 0;
-	top: -999px;
+  position: absolute;
+  left: 0;
+  top: -999px;
 }
 
 .fab {
-	position: fixed;
-	display: block;
-	right: 14px;
-	bottom: 14px;
-	// z-index: 999;
-	// transform: translateZ(0);
+  position: fixed;
+  display: block;
+  right: 14px;
+  bottom: 14px;
+  // z-index: 999;
+  // transform: translateZ(0);
 }
 
 .logo {
-	height: 1em;
+  height: 1em;
 }
-	
+  
 .menu {
-	position: absolute;
-	top: $toolbar-height;
-	right: 5px;
+  position: absolute;
+  top: $toolbar-height;
+  right: 5px;
 
-	.menuItem {
-		margin-right: 16px;
-	}
+  .menuItem {
+    margin-right: 16px;
+  }
 }
 
 .title {
-	padding: 3px 0 0;
-	font-weight: 300;
-	font-size: 140%;
+  padding: 3px 0 0;
+  font-weight: 300;
+  font-size: 140%;
 }
