Initial version of webpack-inline-critical-css-plugin

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,7 +1,7 @@
 // @import './material-icons.scss';
 // @import 'material-components-web/material-components-web';
 @import './reset.scss';
-@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+// @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 html, body {
   height: 100%;
