--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,5 +1,5 @@
-// @import './material-icons.scss';
 // @import 'material-components-web/material-components-web';
+@import './material-icons.scss';
 @import './reset.scss';
 // @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
