--- a/src/components/options/style.scss
+++ b/src/components/options/style.scss
@@ -1,3 +1,7 @@
+/*
+Note: These styles are temporary. They will be replaced before going live.
+*/
+
 .options {
     width: 180px;
     padding: 10px;
