--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -1,3 +1,7 @@
+/*
+Note: These styles are temporary. They will be replaced before going live.
+*/
+
 button, a, img, input, select, textarea {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
