--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,3 +1,7 @@
+/*
+Note: These styles are temporary. They will be replaced before going live.
+*/
+
 @import './reset.scss';
 
 html, body {
@@ -5,6 +9,8 @@ html, body {
   width: 100%;
   padding: 0;
   margin: 0;
+  font: 14px/1.3 Roboto,'Helvetica Neue',arial,helvetica,sans-serif;
   overflow: hidden;
   overscroll-behavior: none;
+  contain: strict;
 }
