--- a/src/components/app/style.scss
+++ b/src/components/app/style.scss
@@ -46,7 +46,7 @@ Note: These styles are temporary. They will be replaced before going live.
     font-size: 150%;
     text-align: center;
   }
-
+ 
   input {
     display: inline-block;
     width: 16em;
@@ -58,5 +58,26 @@ Note: These styles are temporary. They will be replaced before going live.
     box-shadow: inset 0 0 1px #fff;
     border-radius: 3px;
     cursor: pointer;
+  }
+}
+
+:global { 
+  file-drop {
+    overflow: hidden;
+    touch-action: none;
+    height:100%;
+    width:100%;
+
+    &.drop-valid {
+      transition: opacity 200ms ease-in-out, background-color 200ms;
+      opacity: 0.5;
+      background-color:green;
+    }
+
+    &.drop-invalid {
+      transition: opacity 200ms ease-in-out, background-color 200ms;
+      opacity: 0.5;
+      background-color:red;
+    }
   }
 }
