--- a/src/components/Output/custom-els/TwoUp/styles.css
+++ b/src/components/Output/custom-els/TwoUp/styles.css
@@ -36,13 +36,13 @@ two-up[legacy-clip-compat] > :not(.twoUpHandle) {
   border-radius: 20px;
 }
 
-two-up[vertical] .twoUpHandle {
+two-up[orientation='vertical'] .twoUpHandle {
   width: auto;
   height: 10px;
   transform: translateY(var(--split-point)) translateY(-50%);
 }
 
-two-up[vertical] .twoUpHandle::after {
+two-up[orientation='vertical'] .twoUpHandle::after {
   width: 40px;
   height: 80px;
 }
@@ -57,12 +57,12 @@ two-up > :nth-child(2):not(.twoUpHandle) {
   clip-path: inset(0 0 0 var(--split-point));
 }
 
-two-up[vertical] > :nth-child(1):not(.twoUpHandle) {
+two-up[orientation='vertical'] > :nth-child(1):not(.twoUpHandle) {
   -webkit-clip-path: inset(0 0 calc(100% - var(--split-point)) 0);
   clip-path: inset(0 0 calc(100% - var(--split-point)) 0);
 }
 
-two-up[vertical] > :nth-child(2):not(.twoUpHandle) {
+two-up[orientation='vertical'] > :nth-child(2):not(.twoUpHandle) {
   -webkit-clip-path: inset(var(--split-point) 0 0 0);
   clip-path: inset(var(--split-point) 0 0 0);
 }
@@ -80,11 +80,11 @@ two-up[vertical] > :nth-child(2):not(.twoUpHandle) {
     clip: rect(auto auto auto var(--split-point));
   }
 
-  two-up[vertical][legacy-clip-compat] > :nth-child(1):not(.twoUpHandle) {
+  two-up[orientation='vertical'][legacy-clip-compat] > :nth-child(1):not(.twoUpHandle) {
     clip: rect(auto auto var(--split-point) auto);
   }
 
-  two-up[vertical][legacy-clip-compat] > :nth-child(2):not(.twoUpHandle) {
+  two-up[orientation='vertical'][legacy-clip-compat] > :nth-child(2):not(.twoUpHandle) {
     clip: rect(var(--split-point) auto auto auto);
   }
 }
