--- a/src/components/Options/style.scss
+++ b/src/components/Options/style.scss
@@ -31,6 +31,41 @@ Note: These styles are temporary. They will be replaced before going live.
             vertical-align: middle;
         }
     }
+  .title {
+    display: flex;
+    align-items: center;
+    padding: 10px 15px;
+    margin: 0 0 12px;
+    background: rgba(0,0,0,0.9);
+    font: inherit;
+
+    .download {
+      flex: 0;
+      margin: 0 0 0 auto;
+      background: rgba(0,0,0,0.7);
+      border-radius: 50%;
+      padding: 5px;
+      width: 16px;
+      height: 16px;
+      text-decoration: none;
+
+      > svg {
+        width: 16px;
+        height: 16px;
+        fill: #fff;
+      }
+
+      &:hover {
+        background-color: rgba(255,255,255,0.3);
+      }
+    }
+  }
+
+
+  .size-details {
+    padding: 5px 15px;
+    background: rgba(0,0,0,0.5);
+  }
 
     pre {
         font-size: 10px;
