--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -10,52 +10,40 @@ Note: These styles are temporary. They will be replaced before going live.
   height: 100%;
   overflow: hidden;
   contain: strict;
+  display: flex;
 
-  .leftLabel,
-  .rightLabel {
-    position: fixed;
-    bottom: 0;
-    padding: 5px 10px;
-    background: rgba(0,0,0,0.5);
-    color: #fff;
-  }
 
-  .leftLabel { left: 0; }
-  .rightLabel { right: 0; }
 
   .leftOptions,
   .rightOptions {
     position: fixed;
-    bottom: 40px;
+    bottom: 1px;
   }
 
-  .leftOptions { left: 10px; }
-  .rightOptions { right: 10px; }
+  .leftOptions { left: 0px; }
+  .rightOptions { right: 0px; }
 }
 
 .welcome {
-  position: absolute;
-  display: inline-block;
-  left: 50%;
-  top: 50%;
-  padding: 20px;
-  transform: translate(-50%, -50%);
+  flex: 1;
+  align-self: center;
+  justify-self: center;
+  text-align: center;
 
   h1 {
     font-weight: inherit;
     font-size: 150%;
     text-align: center;
   }
- 
+
   input {
     display: inline-block;
     width: 16em;
-    padding: 5px;
+    padding: 10px;
     margin: 0 auto;
     -webkit-appearance: none;
-    border: 1px solid #b68c86;
-    background: #f0d3cf;
-    box-shadow: inset 0 0 1px #fff;
+    border: 1px solid var(--button-fg);
+    background: rgba(var(--button-fg-color), 0.1);
     border-radius: 3px;
     cursor: pointer;
   }
