Add a dummy comment to test netlify deploy

--- a/src/components/Options/style.scss
+++ b/src/components/Options/style.scss
@@ -43,6 +43,7 @@ Note: These styles are temporary. They will be replaced before going live.
       border: none;
       font: inherit;
       color: white;
+      // Dummy comment to trigger a deploy
       transition: box-shadow 150ms ease;
 
       &:hover {
