--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -20,4 +20,7 @@ html, body {
 
   --button-fg-color: 95, 180, 228;
   --button-fg: rgb(95, 180, 228);
+
+  --negative: rgb(207, 113, 127);
+  --positive: rgb(149, 212, 159);
 }
