Add precision property and truncate value display text

--- a/src/components/Output/custom-els/RangeInput/styles.css
+++ b/src/components/Output/custom-els/RangeInput/styles.css
@@ -79,20 +79,22 @@ range-input > aside > span {
   box-sizing: border-box;
   left: var(--value-percent, 0%);
   bottom: 3px;
-  width: 40px;
+  width: 32px;
   height: 62px;
   text-align: center;
-  padding: 8px 0 0;
-  margin: 0 0 0 -20px;
+  padding: 8px 3px 0;
+  margin: 0 0 0 -16px;
   filter: drop-shadow(0 1px 3px rgba(0,0,0,0.3));
   transform-origin: 50% 90%;
   opacity: 0;
   transform: scale(.2);
   color: #fff;
   font: inherit;
+  text-overflow: clip;
   text-shadow: 0 -.5px 0 rgba(0,0,0,0.4);
   transition: transform 200ms ease, opacity 200ms ease;
   pointer-events: none;
+  overflow: hidden;
 }
 range-input input:focus + aside span {
   opacity: 1;
