--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -9,7 +9,7 @@ html, body {
   width: 100%;
   padding: 0;
   margin: 0;
-  font: 12px/1.3 system-ui,-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font: 12px/1.3 system-ui, -apple-system, BlinkMacSystemFont, Roboto, Helvetica, sans-serif;
   overflow: hidden;
   overscroll-behavior: none;
   contain: strict;
