--- a/src/components/Options/style.scss
+++ b/src/components/Options/style.scss
@@ -153,7 +153,7 @@ Note: These styles are temporary. They will be replaced before going live.
 }
 
 
-.quantization {
+.preprocessors {
   padding: 5px 0;
   margin: 5px 0;
   box-shadow: inset 0 -.5px 0 rgba(0,0,0,0.25), 0 .5px 0 rgba(255,255,255,0.15);
