--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -10,74 +10,80 @@ Note: These styles are temporary. They will be replaced before going live.
   height: 100%;
   overflow: hidden;
   contain: strict;
+  display: flex;
+  justify-content: flex-end;
 
-  .leftLabel,
-  .rightLabel {
-    position: fixed;
-    bottom: 0;
-    padding: 5px 10px;
-    background: rgba(0,0,0,0.5);
-    color: #fff;
+  &.horizontal {
+    justify-content: space-between;
+    align-items: flex-end;
   }
 
-  .leftLabel { left: 0; }
-  .rightLabel { right: 0; }
-
-  .leftOptions,
-  .rightOptions {
-    position: fixed;
-    bottom: 40px;
+  &.vertical {
+    flex-direction: column;
   }
-
-  .leftOptions { left: 10px; }
-  .rightOptions { right: 10px; }
 }
 
 .welcome {
-  position: absolute;
-  display: inline-block;
-  left: 50%;
-  top: 50%;
-  padding: 20px;
-  transform: translate(-50%, -50%);
+  margin: auto;
+  text-align: center;
 
   h1 {
     font-weight: inherit;
     font-size: 150%;
     text-align: center;
   }
- 
+
   input {
     display: inline-block;
     width: 16em;
-    padding: 5px;
+    padding: 10px;
     margin: 0 auto;
     -webkit-appearance: none;
-    border: 1px solid #b68c86;
-    background: #f0d3cf;
-    box-shadow: inset 0 0 1px #fff;
+    border: 1px solid var(--button-fg);
+    background: rgba(var(--button-fg-color), 0.1);
     border-radius: 3px;
     cursor: pointer;
   }
 }
 
-:global { 
+:global {
   file-drop {
     overflow: hidden;
     touch-action: none;
     height:100%;
     width:100%;
 
-    &.drop-valid {
-      transition: opacity 200ms ease-in-out, background-color 200ms;
-      opacity: 0.5;
-      background-color:green;
+    &:after {
+      content: '';
+      position: absolute;
+      display: block;
+      left: 10px;
+      top: 10px;
+      right: 10px;
+      bottom: 10px;
+      border: 2px dashed #fff;
+      border-radius: 10px;
+      opacity: 0;
+      transform: scale(0.95);
+      transition: opacity 300ms ease, transform 300ms cubic-bezier(.6,2,.6,1), background-color 300ms step-end, border-color 300ms step-end;
+      pointer-events: none;
     }
 
-    &.drop-invalid {
-      transition: opacity 200ms ease-in-out, background-color 200ms;
-      opacity: 0.5;
-      background-color:red;
+    &.drop-valid:after,
+    &.drop-invalid:after {
+      opacity: 1;
+      transform: scale(1);
+      transition: opacity 300ms ease, transform 300ms cubic-bezier(.6,2,.6,1);
+    }
+
+    &.drop-valid:after {
+      background-color:rgba(88, 116, 88, 0.2);
+      border-color: rgba(65, 129, 65, 0.5);
+    }
+
+    &.drop-invalid:after {
+      background-color:rgba(119, 85, 85, 0.2);
+      border-color:rgba(129, 63, 63, 0.5);
     }
   }
 }
