Add width to options panels

--- a/src/components/Options/style.scss
+++ b/src/components/Options/style.scss
@@ -17,6 +17,7 @@ Note: These styles are temporary. They will be replaced before going live.
 
   &.horizontal {
     border-radius: 1px 1px 5px 5px;
+    width: 230px;
   }
 
   &.vertical {
