set expanded hight to auto

--- a/src/components/output/custom-els/MultiPanel/styles.css
+++ b/src/components/output/custom-els/MultiPanel/styles.css
@@ -7,5 +7,5 @@ multi-panel > .panel-content {
   transition: height 1s;
 }
 multi-panel > .panel-content[expanded] {
-  height:30px;
+  height:auto;
 }
