--- a/src/components/Output/custom-els/RangeInput/styles.css
+++ b/src/components/Output/custom-els/RangeInput/styles.css
@@ -45,6 +45,9 @@ range-input::before {
   box-shadow: 0 -.5px 0 rgba(0,0,0,0.3), inset 0 .5px 0 rgba(255,255,255,0.2), 0 .5px 0 rgba(255,255,255,0.3);
   background: linear-gradient(#34B9EB, #218ab1) 0/ var(--value-percent, 0%) 100% no-repeat #eee;
 }
+range-input[disabled]::before {
+  background: linear-gradient(#aaa, #888) 0/ var(--value-percent, 0%) 100% no-repeat #eee;
+}
 
 range-input input::-webkit-slider-thumb {
   appearance: none;
@@ -57,6 +60,10 @@ range-input input::-webkit-slider-thumb {
   border: none;
   box-shadow: 0 0.5px 2px rgba(0,0,0,0.3);
   outline: none;
+}
+
+range-input[disabled] input::-webkit-slider-thumb {
+  background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10"><circle cx="5" cy="5" r="1" fill="#666" /></svg>') center no-repeat #999;
 }
 
 range-input input:focus::-webkit-slider-thumb {
